docs: update documentation for IWaitForSortableUniqueId interface and its usage in queries and API

--- a/clinerules_bank/tasks/issue623_01.docs.md
+++ b/clinerules_bank/tasks/issue623_01.docs.md
@@ -5,3 +5,26 @@ README_Pure.md
 need to updated about streaming multi projection.
 clinerules_bank/tasks/issue621_wait_for.165448.md
 
+It is optional to implement src/Sekiban.Pure/Query/IWaitForSortableUniqueId.cs
+But when it is implemented, it will wait before the grain will be called for query.
+
+そして、使う側はこのようにQueryを渡す必要がありますし、
+https://github.com/J-Tech-Japan/Sekiban/blob/30046a4f25a1e2a5fad69fb7d2fb01a36db85686/internalUsages/OrleansSekiban.Web/WeatherApiClient.cs#L10-L11
+
+APIも対応する必要があります。
+https://github.com/J-Tech-Japan/Sekiban/blob/30046a4f25a1e2a5fad69fb7d2fb01a36db85686/internalUsages/OrleansSekiban.ApiService/Program.cs#L294-L295
+
+また、実行時にコマンドのLastSortableId を取得しないと使用できません。
+https://github.com/J-Tech-Japan/Sekiban/blob/30046a4f25a1e2a5fad69fb7d2fb01a36db85686/internalUsages/OrleansSekiban.Web/Components/Pages/Weather.razor#L235
+
+これらを含めてドキュメントをアップデートしていただければと思いますが、コンテキスト長は大事なので、長くなりすぎないボリュームと必要なことの理解を考えてください。
+
+ただ、このタスクでは計画するだけです。
+このファイルの下部に計画をよく考えて追記で記入してください。必要なファイルの読み込みなど調査を行い、できるだけ具体的に計画してください。
+わからないことがあったら質問してください。わからない時に決めつけて作業せず、質問するのは良いプログラマです。
+
+設計はチャットではなく、以下の新しいファイル
+
+clinerules_bank/tasks/issue623_01.docs.[hhmmss 編集を開始した時間、分、秒].md
+
+に現在の設計を書いてください。また、あなたのLLMモデル名もファイルの最初に書き込んでください。
